--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -109,7 +109,10 @@
 						<li class="main-list__item">
 							<span class="main-list__text"
 								>Перейдіть на сайт
-								<a class="main-list__link" href="https://webflow.com/"
+								<a
+									class="main-list__link"
+									href="https://webflow.com/"
+									target="_blank"
 									>https://webflow.com/</a
 								>
 								і натисніть кнопку <b>Get started.</b>
@@ -160,7 +163,10 @@
 					<h3 class="main-subtitle">Скільки коштує Webflow</h3>
 					<p class="main-text">
 						Webflow має кілька різних
-						<a class="main-list__link" href="https://webflow.com/pricing"
+						<a
+							class="main-list__link"
+							href="https://webflow.com/pricing"
+							target="_blank"
 							>тарифних планів</a
 						>
 						, призначених як для власників сайтів, так і для команд
@@ -179,6 +185,7 @@
 						<a
 							class="main-list__link"
 							href="https://webflow.com/made-in-webflow"
+							target="_blank"
 							>Made in Webflow.</a
 						>
 						Ми рекомендуємо вам переглядати, вивчати й навіть копіювати ці
@@ -195,6 +202,7 @@
 						<a
 							class="main-list__link"
 							href="https://university.webflow.com/courses/21-day-portfolio-course"
+							target="_blank"
 							>безкоштовний навчальний курс</a
 						>
 						англійською мовою. За 21 день ви познайомитеся з Webflow і
