--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -60,8 +60,12 @@
 					<div class="about-us__container">
 						<div class="block-content">
 							<div class="block-content__wrapper">
-								<h2 class="block-content__title">ABOUT US</h2>
-								<!-- /.about-us__title -->
+
+								<h2 class="block-content__title">
+									ABOUT US
+									<div class="line block-content__line"></div>
+								</h2>
+
 								<div class="block-content__text">
 									Lorem Ipsum is simply dummy text of the printing and
 									typesetting industry. Lorem Ipsum has been the
@@ -86,8 +90,14 @@
 				</section>
 				<section class="find-us">
 					<div class="find-us__container">
-						<h2 class="find-us__name">FIND US</h2>
-						<!-- /.find-us__name -->
+						<div class="find-us__wrapper">
+							<h2 class="find-us__name">
+								FIND US
+								<div class="line find-us__line"></div>
+							</h2>
+							<!-- /.find-us__name -->
+						</div>
+						<!-- /.find-us__wrapper -->
 						<div class="find-us-block">
 							<div class="find-us-block__map">
 								<iframe
@@ -125,11 +135,15 @@
 				<section id="menu" class="our-menu">
 					<div class="our-menu__container">
 						<div class="block-our-menu">
-							<h2 class="block-our-menu__title">OUR MENU</h2>
+							<h2 class="block-our-menu__title">
+								OUR MENU
+								<div class="line block-our-menu__line"></div>
+							</h2>
 							<p class="block-our-menu__text">
-								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-								of
-								type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+								Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+								of type and scrambled it to make a type specimen book.
+								It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
 							</p>
 							<div class="our-menu-images">
 								<div class="our-menu-images__img">
@@ -154,10 +168,9 @@
 						</div>
 						<h2 class="footer__title">LA CARAVANA</h2>
 						<div class="icons">
-							<a href="https://www.instagram.com/"><img src="img/icons/instagram.svg" alt="instagram"></a>
-							<a href="https://www.facebook.com/"><img src="img/icons/facebook.svg" alt="facebook"></a>
-							<a href="https://www.whatsapp.com/"><img src="img/icons/whatsapp.svg" alt="whatsapp"></a>
-
+							<a target="_blank" href="https://www.instagram.com/"><img src="img/icons/instagram.svg" alt="instagram"></a>
+							<a target="_blank" href="https://www.facebook.com/"><img src="img/icons/facebook.svg" alt="facebook"></a>
+							<a target="_blank" href="https://www.whatsapp.com/"><img src="img/icons/whatsapp.svg" alt="whatsapp"></a>
 						</div>
 						<!-- /.icons -->
 					</div>
