--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -277,6 +277,7 @@
 												id="textarea"
 												cols="30"
 												rows="10"
+												placeholder="Your message"
 											></textarea>
 										</div>
 										<!-- ?/.drop-form__line -Message*- -->
