create: lesson_17 + adaptive

--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -193,7 +193,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">Marketing</span>
+												<span
+													class="card-cource__subtitle card-cource__subtitle--1 ">Marketing</span>
 												<div class="card-cource__title">
 													The Ultimate Google Ads Training Course
 												</div>
@@ -217,7 +218,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">Management</span>
+												<span
+													class="card-cource__subtitle card-cource__subtitle--2 ">Management</span>
 												<div class="card-cource__title">
 													Prduct Management Fundamentals
 												</div>
@@ -241,7 +243,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">HR & Recruting</span>
+												<span class="card-cource__subtitle card-cource__subtitle--3 ">HR
+													& Recruting</span>
 												<div class="card-cource__title">
 													HR Management and Analytics
 												</div>
@@ -265,7 +268,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">Marketing</span>
+												<span
+													class="card-cource__subtitle card-cource__subtitle--4 ">Marketing</span>
 												<div class="card-cource__title">
 													Brand Management & PR Communications
 												</div>
@@ -289,7 +293,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">Management</span>
+												<span
+													class="card-cource__subtitle card-cource__subtitle--5">Management</span>
 												<div class="card-cource__title">
 													Business Development Management
 												</div>
@@ -313,7 +318,8 @@
 											</div>
 											<!-- /.cources-cards__image -->
 											<div class="card-cource__body">
-												<span class="card-cource__subtitle">Design</span>
+												<span
+													class="card-cource__subtitle card-cource__subtitle--6">Design</span>
 												<div class="card-cource__title">
 													Graphic Design Basic
 												</div>
