--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -20,35 +20,42 @@
 					<div class="header-block">
 						<div class="header-block__logo">
 							<a href="#"><img src="img/header/logo.svg" alt="Logo" /></a>
-						</div>
-						<nav class="header-block-menu menu">
-							<ul class="menu__list">
-								<li class="menu__item">
-									<a href="#" class="menu__link">About Us</a>
-								</li>
-								<li class="menu__item">
-									<a href="#" class="menu__link">Courses</a>
-								</li>
-								<li class="menu__item">
-									<a href="#" class="menu__link">Events</a>
-								</li>
-								<li class="menu__item">
-									<a href="#" class="menu__link">Blog</a>
-								</li>
-								<li class="menu__item">
-									<a href="#" class="menu__link">Contacts</a>
-								</li>
-							</ul>
-						</nav>
 
-						<div class="header-block-actions">
-							<a href="#" class="button button--bg header-block-actions__button"><span>Get
-									consultation</span></a>
-							<a href="#" class="header-block-actions__login">
-								<span>Log in / Register</span>
-							</a>
 						</div>
-						<!-- /.header-block__actions -->
+
+						<div class="header-block__menu menu">
+							<div class="menu__icon">
+								<span></span>
+							</div>
+							<nav class="menu__body">
+								<ul class="menu__list">
+									<li class="menu__item">
+										<a href="#" class="menu__link">About Us</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Courses</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Events</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Blog</a>
+									</li>
+									<li class="menu__item">
+										<a href="#" class="menu__link">Contacts</a>
+									</li>
+								</ul>
+							</nav>
+							<div class="header-block-actions">
+								<a href="#" class="button button--bg header-block-actions__button"><span>Get
+										consultation</span></a>
+								<a href="#" class="header-block-actions__login">
+									<span>Log in / Register</span>
+								</a>
+							</div>
+							<!-- /.header-block__actions -->
+						</div>
+						<!-- /.header-block-menu -->
 					</div>
 					<!-- /.header-block -->
 				</div>
@@ -358,6 +365,7 @@
 			<!-- /.footer -->
 		</div>
 		<!-- /.wrapper -->
+		<script src="js/script.js"></script>
 	</body>
 
 </html>
