fixed: bugs in menu burger

--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -27,33 +27,37 @@
 							<div class="menu__icon">
 								<span></span>
 							</div>
-							<nav class="menu__body">
-								<ul class="menu__list">
-									<li class="menu__item">
-										<a href="#" class="menu__link">About Us</a>
-									</li>
-									<li class="menu__item">
-										<a href="#" class="menu__link">Courses</a>
-									</li>
-									<li class="menu__item">
-										<a href="#" class="menu__link">Events</a>
-									</li>
-									<li class="menu__item">
-										<a href="#" class="menu__link">Blog</a>
-									</li>
-									<li class="menu__item">
-										<a href="#" class="menu__link">Contacts</a>
-									</li>
-								</ul>
-							</nav>
-							<div class="header-block-actions">
-								<a href="#" class="button button--bg header-block-actions__button"><span>Get
-										consultation</span></a>
-								<a href="#" class="header-block-actions__login">
-									<span>Log in / Register</span>
-								</a>
+							<div class="menu__block">
+								<nav class="menu__body">
+									<ul class="menu__list">
+										<li class="menu__item">
+											<a href="#" class="menu__link">About Us</a>
+										</li>
+										<li class="menu__item">
+											<a href="#" class="menu__link">Courses</a>
+										</li>
+										<li class="menu__item">
+											<a href="#" class="menu__link">Events</a>
+										</li>
+										<li class="menu__item">
+											<a href="#" class="menu__link">Blog</a>
+										</li>
+										<li class="menu__item">
+											<a href="#" class="menu__link">Contacts</a>
+										</li>
+									</ul>
+								</nav>
+								<div class="header-block-actions">
+									<a href="#"
+										class="button button--bg header-block-actions__button"><span>Get
+											consultation</span></a>
+									<a href="#" class="header-block-actions__login">
+										<span>Log in / Register</span>
+									</a>
+								</div>
+								<!-- /.header-block__actions -->
 							</div>
-							<!-- /.header-block__actions -->
+							<!-- /.menu__item -->
 						</div>
 						<!-- /.header-block-menu -->
 					</div>
