create: +3 section in this page

--- a/jaguar/index.html
+++ b/jaguar/index.html
@@ -139,7 +139,9 @@
 				<!-- /.detalied-description -->
 				<section class="benefits-block">
 					<div class="benefits-block__container">
-						<h2 class="benefits-block__subtitle subtitle">Опис роботи</h2>
+						<h2 class="benefits-block__subtitle subtitle">
+							Переваги вакансії
+						</h2>
 						<div class="benefits benefits__block">
 							<div class="benefits__item">
 								<div class="benefits__icon">
@@ -231,12 +233,13 @@
 					</div>
 					<!-- /.benefits-block__container -->
 				</section>
+				<!-- /.benefits-block -->
 				<section class="like-block">
 					<div class="like-block__container">
 						<h2 class="like-block__title">
 							Що подобається нашим працівникам?
 						</h2>
-						<div class="slider">
+						<div class="slider slider__block">
 							<div class="swiper">
 								<!-- Additional required wrapper -->
 								<div class="swiper-wrapper">
@@ -268,17 +271,233 @@
 							<!-- /.slider__buttons -->
 						</div>
 						<!-- /.slider -->
+						<div class="line"></div>
 					</div>
 					<!-- /.like-block__container -->
 				</section>
 				<!-- /.like-block -->
+				<section class="description-job">
+					<div class="description-job__container">
+						<h2 class="description-job__subtitle subtitle">
+							Опис роботи
+						</h2>
+						<div class="description-job__name">
+							Оператор/ка виробництва
+						</div>
+						<div class="job job__description">
+							<div class="job__item">
+								<div class="job__subtitle job__subtitle--icon-1">
+									ПОЧАТКОВА ЗАРОБІТНА ПЛАТА&nbsp;: <span>1276€*</span>
+								</div>
+								<ul class="job__list list-job list-job--1">
+									<li class="list-job__item">
+										Включає гарантовану тарифну заробітну плату в
+										розмірі 1160 євро
+									</li>
+									<li class="list-job__item">
+										Бонус за відвідуваність до 10% (максимум 116 євро)
+									</li>
+									<li class="list-job__item">
+										Ми гарантуємо підвищення заробітної плати під час
+										наступних 6 років
+									</li>
+								</ul>
+								<div class="job__warning">
+									* усі суми в євро наведені до утримання податів та
+									зборів
+								</div>
+							</div>
+							<!-- /.job__item -->
+							<div class="job__item">
+								<div class="job__image">
+									<img src="img/job/image-1.jpeg" alt="image: work" />
+								</div>
+								<!-- /.job__image -->
+							</div>
+							<!-- /.job__item -->
+							<div class="job__item">
+								<div class="job__subtitle job__subtitle--icon-2">
+									ШИРОКИЙ СПЕКТР ПЕРЕВАГ
+								</div>
+								<ul class="job__list list-job list-job--2">
+									<li class="list-job__item">
+										Безкоштовний автобусний транспорт або грошова
+										надбавка на транспорт
+									</li>
+									<li class="list-job__item">
+										Харчування лише за 1 євро
+									</li>
+									<li class="list-job__item">
+										400 євро на рік у вигляді бонусів за вашим вибором
+									</li>
+									<li class="list-job__item">
+										До 150 євро допомоги на відпочинок та навчання
+									</li>
+									<li class="list-job__item">
+										Підвищені надбавки за понаднормову роботу у
+										вихідні дні, у порівнянні з тим, що передбачено
+										трудовим законодавством.
+									</li>
+									<li class="list-job__item">
+										100% покри ття страхування життя та від нещасних
+										випадків, додаткові внески роботодавця у пенсійне
+										накопичення
+									</li>
+									<li class="list-job__item">
+										Iнші переваги офіціного працевлаштування, про які
+										дізнаєтесь після реєстрації
+									</li>
+								</ul>
+							</div>
+							<!-- /.job__item -->
+							<div class="job__item">
+								<div class="job__image">
+									<img src="img/job/image-2.png" alt="image: work" />
+								</div>
+								<!-- /.job__image -->
+							</div>
+							<!-- /.job__item -->
+						</div>
+						<!-- /.job -->
+						<div class="line"></div>
+					</div>
+					<!-- /.description-job__container -->
+				</section>
+
+				<section class="map">
+					<div class="map__background"></div>
+					<!-- /.map__block -->
+					<div class="map__container">
+						<div class="map__body">
+							<div class="map__title">Місце виконання робіт</div>
+							<div class="map__subtitle">місто Нітра</div>
+							<div class="map__text">
+								забезпечуємо навчання, підтримку наших працівників, щоб
+								ви знайшли роботу, якою будете пишатися
+							</div>
+						</div>
+						<!-- /.map__body -->
+					</div>
+					<!-- /.map__container -->
+				</section>
+				<!-- /.map -->
+				<section class="vacancies">
+					<div class="vacancies__container">
+						<h2 class="vacancies__subtitle subtitle">
+							Також в нас є інші відкриті вакансії:
+						</h2>
+						<!-- /.vacancies__title -->
+						<div class="vacacies__grid grid-vacancies">
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-1.svg"
+										alt="icon: tex" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">
+									Працівник технічного обслуговування у кузовному
+									відділі
+								</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-2.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">
+									Виправних дефектів у кузовному відділі
+								</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-3.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">
+									Працівник технічного обслуговування у монтажному
+									відділі
+								</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-4.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">Автоелектрик</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-5.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">Автомеханік</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-6.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">
+									Виправних дефектів у фарбувальному відділі
+								</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+							<div class="grid-vacancies__item">
+								<div class="grid-vacancies__icon">
+									<img
+										src="img/vacancies/icons/icon-7.svg"
+										alt="icon: tecnician" />
+								</div>
+								<div class="grid-vacancies__line"></div>
+								<div class="grid-vacancies__title">
+									Технік з’єднання
+								</div>
+							</div>
+							<!-- /.grid-vacancies__item -->
+						</div>
+						<!-- /.vacacies__grid -->
+					</div>
+					<!-- /.vacancies__container -->
+				</section>
+				<!-- /.open-vacancies -->
 			</main>
 			<!-- /.page -->
 
-			<footer class="footer"></footer>
+			<footer class="footer">
+				<div class="footer__container">
+					<div class="footer__image">
+						<img src="img/jlr-logo.png" alt="logo-footer" />
+					</div>
+					<!-- /.footer__image -->
+					<a
+						href="mailto:nabir@robotajaguarlandrover.com.ua"
+						class="footer__link"
+						target="_blank"
+						>nabir@robotajaguarlandrover.com.ua</a
+					>
+				</div>
+				<!-- /.footer__container -->
+			</footer>
 			<!-- /.footer -->
 		</div>
 		<!-- /.wrapper -->
+		<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
