fixed: logo bugs

--- a/jaguar/index.html
+++ b/jaguar/index.html
@@ -21,9 +21,7 @@
 				<div class="header__container">
 					<div class="header__block">
 						<div class="header__logo">
-							<a href="#"
-								><img src="img/header/logo.svg" alt="Logo"
-							/></a>
+							<a href="#"><img src="img/jlr-logo.png" alt="Logo" /></a>
 						</div>
 						<div class="header__menu menu">
 							<div class="menu__icon">
